--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body>
+    <div class="notes">
+        <div class="tools">
+            <textarea ></textarea>
+        </div>
+    </div>
     
 </body>
 <script src="script.js"></script>
