--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <button class="edit"><i class="fas fa-edit"></i></button>
             <button class="'delete"><i class="fas fa-trash"></i></button>
         </div>
-        <div class="main">        </div>
-        <textarea ></textarea>
+        <div class="main hidden">        </div>
+        <textarea ></textarea> 
 
     </div>
     
