--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
             <button class="edit"><i class="fas fa-edit"></i></button>
             <button class="'delete"><i class="fas fa-trash"></i></button>
         </div>
-        <div class="main hidden">        </div>
+        <div class="main hidden"></div>
         <textarea ></textarea> 
 
     </div>
     
 </body>
-<script src="script.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/marked/4.2.12/marked.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/marked@3.0.7/marked.min.js"></script>
+<script src="script.js" defer></script>
 </html>
