--- a/index.html
+++ b/index.html
@@ -9,15 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="notes">
-        <div class="tools">
-            <button class="edit"><i class="fas fa-edit"></i></button>
-            <button class="'delete"><i class="fas fa-trash"></i></button>
-        </div>
-        <div class="main hidden"></div>
-        <textarea ></textarea> 
-
-    </div>
+   <button class="add" id="add"><i class="fas fa-plus"></i>Add</button>
     
 </body>
 <script src="https://cdn.jsdelivr.net/npm/marked@3.0.7/marked.min.js"></script>
